--- a/simpleApp/templates/simpleApp/index.html
+++ b/simpleApp/templates/simpleApp/index.html
@@ -12,6 +12,7 @@
 <body>
 <div class="flex justify-center items-center h-screen text-red-500">
     <h1 class="text-4xl font-bold">Welcome to my website!</h1>
+    <p>Ultima pregunta {{ latest_question_list }}</p>
 </div>
 </body>
 </html>
